# FinWise

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  finwise-implementation.md  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt
ios/FinWiseWidgets/: FinWiseWidgets.swift  Info.plist
ios/Runner/: Info.plist  Runner.entitlements  game_engine.cpp  game_engine.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/algorithms/: ai_trigger_engine.dart  behavior_intelligence.dart  enough_anchor.dart  finwise_score.dart  flow_engine.dart  local_prediction_engine.dart  quadrant_tracker.dart
lib/providers/: alert_provider.dart  budget_provider.dart  chat_provider.dart  cicilan_provider.dart  cicilan_provider.g.dart  daily_insight_provider.dart  daily_limit_strategy_provider.dart  emergency_fund_provider.dart  income_provider.dart  macro_context_provider.dart  report_filter_provider.dart  rpd_counter_provider.dart  transaction_provider.dart  user_profile_provider.dart  visibility_provider.dart
lib/services/: ai_action_executor.dart  ai_tools.dart  archive_service.dart  backup_service.dart  gemini_service.dart  macro_context_service.dart  notification_service.dart  pdf_export_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+126 files in other folders)
